jvector-native/src/main/java/io/github/jbellis/jvector/vector/cnative/NativeSimdOps.java


    /**
     * Address for:
     * {@snippet lang=c :
     * float nvq_square_l2_distance_8bit(const float *vector, const unsigned char *quantized, size_t length, float alpha, float x0, float minValue, float maxValue)
     * }
     */
    public static MemorySegment nvq_square_l2_distance_8bit$address() {
        return nvq_square_l2_distance_8bit.ADDR;
    }

    /**
     * {@snippet lang=c :
     * float nvq_square_l2_distance_8bit(const float *vector, const unsigned char *quantized, size_t length, float alpha, float x0, float minValue, float maxValue)
     * }
     */
    public static float nvq_square_l2_distance_8bit(MemorySegment vector, MemorySegment quantized, long length, float alpha, float x0, float minValue, float maxValue) {
        var mh$ = nvq_square_l2_distance_8bit.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("nvq_square_l2_distance_8bit", vector, quantized, length, alpha, x0, minValue, maxValue);
            }
            return (float)mh$.invokeExact(vector, quantized, length, alpha, x0, minValue, maxValue);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class nvq_dot_product_8bit {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            NativeSimdOps.C_FLOAT,
            NativeSimdOps.C_POINTER,
            NativeSimdOps.C_POINTER,
            NativeSimdOps.C_LONG,
            NativeSimdOps.C_FLOAT,
            NativeSimdOps.C_FLOAT,
            NativeSimdOps.C_FLOAT,
            NativeSimdOps.C_FLOAT
        );

        public static final MemorySegment ADDR = NativeSimdOps.findOrThrow("nvq_dot_product_8bit");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC, Linker.Option.critical(true));
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * float nvq_dot_product_8bit(const float *vector, const unsigned char *quantized, size_t length, float alpha, float x0, float minValue, float maxValue)
     * }
     */
    public static FunctionDescriptor nvq_dot_product_8bit$descriptor() {
        return nvq_dot_product_8bit.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * float nvq_dot_product_8bit(const float *vector, const unsigned char *quantized, size_t length, float alpha, float x0, float minValue, float maxValue)
     * }
     */
    public static MethodHandle nvq_dot_product_8bit$handle() {
        return nvq_dot_product_8bit.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * float nvq_dot_product_8bit(const float *vector, const unsigned char *quantized, size_t length, float alpha, float x0, float minValue, float maxValue)
     * }
     */
    public static MemorySegment nvq_dot_product_8bit$address() {
        return nvq_dot_product_8bit.ADDR;
    }

    /**
     * {@snippet lang=c :
     * float nvq_dot_product_8bit(const float *vector, const unsigned char *quantized, size_t length, float alpha, float x0, float minValue, float maxValue)
     * }
     */
    public static float nvq_dot_product_8bit(MemorySegment vector, MemorySegment quantized, long length, float alpha, float x0, float minValue, float maxValue) {
        var mh$ = nvq_dot_product_8bit.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("nvq_dot_product_8bit", vector, quantized, length, alpha, x0, minValue, maxValue);
            }
            return (float)mh$.invokeExact(vector, quantized, length, alpha, x0, minValue, maxValue);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class nvq_cosine_8bit_packed {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            NativeSimdOps.C_LONG,
            NativeSimdOps.C_POINTER,
            NativeSimdOps.C_POINTER,
            NativeSimdOps.C_LONG,
            NativeSimdOps.C_FLOAT,
            NativeSimdOps.C_FLOAT,
            NativeSimdOps.C_FLOAT,
            NativeSimdOps.C_FLOAT,
            NativeSimdOps.C_POINTER
        );

        public static final MemorySegment ADDR = NativeSimdOps.findOrThrow("nvq_cosine_8bit_packed");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC, Linker.Option.critical(true));
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int64_t nvq_cosine_8bit_packed(const float *vector, const unsigned char *quantized, size_t length, float alpha, float x0, float minValue, float maxValue, const float *centroid)
     * }
     */
    public static FunctionDescriptor nvq_cosine_8bit_packed$descriptor() {
        return nvq_cosine_8bit_packed.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int64_t nvq_cosine_8bit_packed(const float *vector, const unsigned char *quantized, size_t length, float alpha, float x0, float minValue, float maxValue, const float *centroid)
     * }
     */
    public static MethodHandle nvq_cosine_8bit_packed$handle() {
        return nvq_cosine_8bit_packed.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int64_t nvq_cosine_8bit_packed(const float *vector, const unsigned char *quantized, size_t length, float alpha, float x0, float minValue, float maxValue, const float *centroid)
     * }
     */
    public static MemorySegment nvq_cosine_8bit_packed$address() {
        return nvq_cosine_8bit_packed.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int64_t nvq_cosine_8bit_packed(const float *vector, const unsigned char *quantized, size_t length, float alpha, float x0, float minValue, float maxValue, const float *centroid)
     * }
     */
    public static long nvq_cosine_8bit_packed(MemorySegment vector, MemorySegment quantized, long length, float alpha, float x0, float minValue, float maxValue, MemorySegment centroid) {
        var mh$ = nvq_cosine_8bit_packed.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("nvq_cosine_8bit_packed", vector, quantized, length, alpha, x0, minValue, maxValue, centroid);
            }
            return (long)mh$.invokeExact(vector, quantized, length, alpha, x0, minValue, maxValue, centroid);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class nvq_shuffle_query_in_place_8bit {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            NativeSimdOps.C_POINTER,
            NativeSimdOps.C_LONG
        );

        public static final MemorySegment ADDR = NativeSimdOps.findOrThrow("nvq_shuffle_query_in_place_8bit");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC, Linker.Option.critical(true));
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void nvq_shuffle_query_in_place_8bit(float *vector, size_t length)
     * }
     */
    public static FunctionDescriptor nvq_shuffle_query_in_place_8bit$descriptor() {
        return nvq_shuffle_query_in_place_8bit.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void nvq_shuffle_query_in_place_8bit(float *vector, size_t length)
     * }
     */
    public static MethodHandle nvq_shuffle_query_in_place_8bit$handle() {
        return nvq_shuffle_query_in_place_8bit.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void nvq_shuffle_query_in_place_8bit(float *vector, size_t length)
     * }
     */
    public static MemorySegment nvq_shuffle_query_in_place_8bit$address() {
        return nvq_shuffle_query_in_place_8bit.ADDR;
    }
